# VE-RAG-System

./: .coverage  .env.customer.template  .env.dev-full  .env.example  .env.insurance  .env.laptop.example  .env.lawfirm  .env.spark.example  .env.test-tenant  .gitignore  CLAUDE.md  DEVELOPMENT_PLANS.md  PRD_v0.75.md  PRD_v0.80.md  README.md  app.py  claude-danger.bat  docker-compose.customer.yml  docker-compose.dev.yml  pyproject.toml  requirements-api.txt  requirements-spark.txt  requirements-wsl.txt  requirements.txt  run-tests.bat  setup.sh  start-api.bat  start.sh  versions.md
.claude/: QUICK_REFERENCE.md  settings.json  settings.local.json
ai_ready_rag/: __init__.py  config.py  main.py
alembic/: env.py
docs/: AIRGAPPED_RAG_TAM_SAM_SOM_2026-02-17.md  ARCHITECTURE.md  AUTO_TAGGING_CONFIGURATION.md  CLAUDE_API_VS_OLLAMA.md  CLAUDE_DATA_SECURITY_AND_COMPLIANCE.md  CUSTOMER_PRESENTATION_DRAFT.md  DEEP_DIVE_REVIEW_DEMO_PILOT_2026-02-17.md  DGX_SPARK_OPTIMIZATION.md  HYBRID_SEARCH_RUNBOOK.md  MRD-AI-Ready-RAG-v1.md  MRD-AI-Ready-RAG-v1.pptx  PROBLEM_STATEMENT_ARQ_OCR.md  SPARK_DEPLOYMENT.md  SUMMARY_CHUNKS_DESIGN.md  UI_TEST_PLAN.md  VAULTIQ_BUSINESS_ANALYSIS.md  VE-RAG-System-Assessment-021826.md  VECTOR_SERVICE.md  WARMING_ARCHITECTURE.md  WSL2_SETUP.md  competitor-analysis-2026-02-10.md  competitor-battle-matrix-2026-02-10.md  competitor-pricing-snapshot-2026-02-10.md  competitor-ui-demo-library-2026-02-10.md  generate_mrd_deck.py  github-open-source-rag-pattern-benchmark-2026-02-11.md  outbound-messaging-pack-2026-02-10.md  pilot-gtm-action-plan-2026-02-10.md  snowflake-pricing-estimate-2026-02-10.md  top-5-battlecards-2026-02-10.md  where-we-win-where-we-dont-2026-02-10.md  ~$MRD-AI-Ready-RAG-v1.pptx
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
scripts/: export-chunks.sh  export_chunks.py  export_chunks_remote.py  generate_ragbench_manifest.py  init-pgvector.sql  inspect_chunks.py  list_documents.py  provision-customer.sh  reprocess_failed.py  start-dev-full.sh  start-servers.sh  start-tenant.sh  stop-servers.sh  upload_directory.py
specs/: ADMIN_CHAT_DELETION_v1.md  ADMIN_DASHBOARD_SPEC.md  AUTO_TAGGING_v1.md  AUTO_TAG_KEYWORD_RULES_v1.md  CHAT_API.md  (+27 more)
(+470 files in other folders)
